# genotp

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: otp_bench.rs
docs/en/: design.md  usage.md
docs/id/: design.md  usage.md
examples/: builder_example.rs  provisioning_example.rs  totp_example.rs  verification_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: base32_fuzz.rs  context_binding_fuzz.rs  context_builder_fuzz.rs  hotp_fuzz.rs  provisioning_fuzz.rs  totp_fuzz.rs  verifier_context_fuzz.rs
genotp/: Cargo.toml
genotp-ffi/: Cargo.toml  build.rs  cbindgen.toml
genotp-ffi/examples/: ffi_example  ffi_example.c
genotp-ffi/include/: genotp.h
genotp-ffi/src/: lib.rs
genotp/benches/: otp_bench.rs
genotp/examples/: hotp_example.rs  quick_start.rs
genotp/src/: builder.rs  error.rs  helpers.rs  hotp.rs  key.rs  lib.rs  skew.rs
genotp/tests/: property_test.rs
src/: algorithm.rs  base32.rs  config.rs  constant_time.rs  context.rs  helpers.rs  hotp.rs  key.rs  lib.rs  metrics.rs  provisioning.rs  skew.rs  totp.rs  verification.rs
tests/: concurrency_test.rs  integration_test.rs  load_test.rs  property_test.proptest-regressions  property_test.rs
